--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
- background-image: url("./images/white-imac-apple-keyboard.jpg");
+ background-image: url(/images/white-imac-apple-keyboard.jpg);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
